--- a/style.css
+++ b/style.css
@@ -1,4 +1,451 @@
+:root {
+    --grey: #ddd;
+    --gold: linear-gradient(45deg,
+                         gold,
+                         orange);
+    --orange: #ffc315;
+    --gradient-black: linear-gradient(45deg,
+                                        #000 20%,
+                                        #111 30%,
+                                        #222 80%,
+                                        #333 100%);
+}
+
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 62.5%;   /* 1rem = 10px */
+    box-sizing: border-box;
+    font-family: "Roboto Condensed", sans-serif;
+ }
+
+ html {
+     scroll-behavior: smooth; } /* smooth scrolling */
+
+body {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 350px auto;
+    grid-template-rows: repeat(3, auto);
+}   
+
+p {
+    font-size: 2rem;
+}
+
+
+
+/* navbar styles */
+.navbar, .footer {
+    display: flex;
+    width: 100%;
+    height: 70px;
+    background: var(--gradient-black)
+}
+
+#navbar-button {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+
+}
+
+.navbar li a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    font-size: 2.2rem;
+    }
+
+/* navbar styles */
+
+
+
+/* welcome-section styles */
+.photo-overlay-section { /* Photo with overlay of education */
+    grid-area: 1 / 1 / 3 / 2;
+    color: white;
+    text-align: center;
+    background: linear-gradient(180deg,
+                            #000 60%,
+                            #333 100%
+                            );
+}
+
+#profile-photo {
+    width: 100%;
+    height: auto;
+}
+
+#front-end-badge p {
+    font-size: 2.5rem;
+}
+
+#front-end-badge {
+    color: black;
+    padding: 6px;
+    background: var(--gold);
+    font-weight: bold;
+    position: relative;
+    width: 60%;
+    margin: 0 auto;
+    top: -24px;
+    text-align: center;
+    border-radius: 20px;
+}
+
+#education-section {
+    padding: 50px 20px 50px 20px;
+}
+
+#education-text {
+    margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 3rem;
+}
+
+.education-name {
+    color: var(--orange);
+    font-weight: bold;
+    padding: 10px 0;
+    font-size: 2.1rem;
+}
+
+.education-desc {
+    font-size: 1.7rem;
+    margin-bottom: 30px;
+}
+
+.about-me-section { /*Text next to Photo-overlay*/
+    grid-area: 1 / 2 / 2 / 3;
+    text-align: center;
+    background-color: var(--grey);
+    height: 525px;
+    padding: 60px 10px;
+}
+
+#name {
+    margin-bottom: 30px;
+}
+
+#name span {
+    font-size: 5rem;
+    line-height: 60px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    text-align: center;
+}
+
+.bold {
+    font-weight: 700 !important;
+}
+
+#about-me p {
+    font-size: 1.6rem;
+    line-height: 2.5rem;
+    margin: 15px;
+    color: #333;
+}
+/* welcome-section styles */
+
+
+
+/* left-column styles */
+.left-column-section {
+    grid-area: 3 / 1 / 4 / 2;
+    background: var(--grey);
+    font-size: 2.8rem;
+}
+
+#skills, #contacts {
+    padding: 50px 40px;
+}
+
+#skills p {
+    font-weight: bold;
+    font-size: 2.4rem;
+    padding: 10px 0;
+}
+
+#knowledge-text, #contacts-text, #projects-text, #code-text {
+    margin-bottom: 20px;
+    font-size: 3rem !important;
+}
+
+.progress-bar {
+    width: 100%;
+    height: 20px;
+    background-color: #ccc;
+    border-radius: 10px;
+    margin: 15px 0;
+    overflow: hidden;
+}
+
+.git,.html, .css, .sql, .js, .ts {
+    font-size: 1.8rem;
+    text-align: right;
+    height: 100%;
+    background-color: var(--orange);
+}
+
+.git {
+    width: 50%;
+}
+
+.html {
+    width: 80%;
+}
+
+.css {
+    width: 60%;
+}
+
+.sql {
+    width: 30%;
+}
+
+.js {
+    width: 1%;
+}
+
+.ts {
+    width: 0%;
+}
+
+
+#contacts ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 30px;
+}
+
+#contacts li p {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 0;
+}
+
+#contacts li span {
+    font-size: 1.8rem;
+}
+
+#contacts a {
+    font-size: 1.8rem;
+    color: var(--gold);
+    text-decoration: none;
+}
+
+#contacts a:hover {
+    text-shadow: 1px 1px 0 var(--orange),
+    -1px 1px 0 var(--orange),
+    1px -1px 0 var(--orange),
+    -1px -1px 0 var(--orange);
+}
+
+/* left-column styles */
+
+
+
+/* main-section styles */
+.main-section {
+    grid-area: 2 / 2 / 4 / 3;
+    width: 100%;
+    height: auto;
+    font-size: 2.8rem;
+}
+
+#projects-text {
+    text-align: center;
+    padding: 50px 0 0 0;
+}
+
+#list-of-projects {
+    padding: 0 50px 50px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#list-of-projects a {
+    width: 60%;
+}
+
+
+#list-of-projects h3 {
+    font-size: 2.5rem;
+    margin: 50px 0 20px 0;
+    text-align: right;
+}
+
+.thumbnail {
+    width: 100%;
+    height: auto;
+    border: 1px solid #333;
+    border-radius: 10px 0 10px 0;
+}
+
+.thumbnail:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease-in-out;
+}
+
+#code-example {
+    padding: 30px 20px;
+    text-align: center;
+}
+
+#code-snippets h3{
+    font-size: 2.5rem;
+    margin: 50px 0 20px 0;
+    text-align: left;
+}
+
+code {
+    display: block;
+    text-align: left;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 1.6rem;
+    margin-bottom: 30px;
+}
+/* main-section styles */
+
+.footer {
+    color: #ddd;
+    text-align: center;
+    padding: 10px;
+    font-size: 1.6rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#github-icon {
+    background-color: #ddd;
+    border-radius: 30px;
+    width: 24px;
+    margin-right: 8px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #ddd;
+    font-size: 2rem;
+}
+
+#rs-logo-icon {
+    background-color: var(--orange);
+    width: 110px;
+    border-radius: 7px;
+    padding: 3px;
+}
+
+
+
+
+@media screen and (max-width: 768px) {
+    main {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+                "photo-overlay-section"
+                "about-me-section"
+                "main-section"
+                "left-column-section";
+    }
+
+    .navbar {
+        height: 70px;
+        position: fixed;
+        z-index: 1000;
+    }
+
+    .navbar li a {
+        display: flex;
+        text-align: center;
+        padding: 15px;
+        font-size: 1.6rem;
+    }
+
+    #front-end-badge p {
+        font-size: 2.5rem;
+    }
+
+    #front-end-badge {
+        width: 55%;
+        top: -23px;
+    }
+
+    #education-text {
+        font-size: 2.8rem;
+    }
+
+    .education-name {
+        font-size: 1.9rem;
+    }
+
+    .education-desc {
+        font-size: 1.7rem;
+    }
+
+    #profile-photo {
+        margin-top: 70px;
+        width: 100%;
+    }
+
+    .photo-overlay-section {
+        grid-area: photo-overlay-section;
+    }
+    
+    .about-me-section {
+        grid-area: about-me-section;
+        height: auto;
+        scroll-margin-top: 70px;
+    }
+    
+    .main-section {
+        grid-area: main-section;
+    }
+    
+    .left-column-section {
+        grid-area: left-column-section;     
+    }
+
+    #contacts li span {
+        font-size: 1.9rem;
+    }
+    
+    #contacts a {
+        font-size: 1.9rem;
+    }
+
+    #skills {
+        scroll-margin-top: 70px;
+    }
+
+    #projects {
+        scroll-margin-top: 70px;
+    }
+
+    #list-of-projects a {
+        width: 80%;
+    }
+
+    #code-example {
+        scroll-margin-top: 70px;
+    }
+
+    #footer {
+        justify-content: space-between;
+    }
 }
